force-app/main/default/objects/BACS_Report_Mapping__mdt/BACS_Report_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>BACS Report Mapping</label>
    <pluralLabel>BACS Report Mappings</pluralLabel>
</CustomObject>