force-app/main/default/objects/BACS_Report_Mapping__mdt/fields/Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name__c</fullName>
    <label>Attribute Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>