force-app/main/default/objects/BACS_Report_Mapping__mdt/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADDACS</fullName>
                <default>true</default>
                <label>ADDACS</label>
            </value>
            <value>
                <fullName>ARUDD</fullName>
            </value>
            <value>
                <fullName>AUDDIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>