force-app/main/default/objects/BACS_Report_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
                <default>true</default>
                <label>Date</label>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>