force-app/main/default/objects/BACS_Report_Mapping__mdt/listViews/BACS_Report_Mapping_Default.listView-meta.xml
<ListView>
    <fullName>BACS_Report_Mapping_Default</fullName>
    <columns>MasterLabel</columns>
    <columns>Report_Type__c</columns>
    <columns>Attribute_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>BACS Report Mapping Default</label>
</ListView>